# FastAPI_TODO_App

./: .env.example  .pre-commit-config.yaml  DOMAIN_RESTRUCTURING.md  Dockerfile  ENHANCEMENT_ROADMAP.md  INTEGRATION_REPORT.md  Makefile  OPTIMIZATION_PLAN.md  OPTIMIZATION_SUMMARY.md  POSTGRES_SETUP.md  PYDANTIC_MODELS.md  README.md  api_test.py  docker-compose.yml  pyproject.toml  requirements-dev.txt  test_api.py  test_integration.py  todo_app.db
.github/workflows/: ci-cd.yml
docker/: entrypoint.sh  healthcheck.py
scripts/: __init__.py  setup_postgres.py  setup_todo_postgres.py  test_postgres_connection.py
src/fastapi_todo_app/: __init__.py  main.py
src/fastapi_todo_app/api/v1/: advanced.py  api.py  health.py  todos.py
src/fastapi_todo_app/core/: config.py
src/fastapi_todo_app/db/: database.py
src/fastapi_todo_app/domains/: __init__.py
src/fastapi_todo_app/domains/employees/: __init__.py
src/fastapi_todo_app/domains/employees/db/: database.py
src/fastapi_todo_app/domains/employees/models/: __init__.py
src/fastapi_todo_app/domains/employees/schemas/: __init__.py
src/fastapi_todo_app/domains/employees/services/: __init__.py
src/fastapi_todo_app/domains/todos/: __init__.py
src/fastapi_todo_app/domains/todos/api/: __init__.py  todos.py
src/fastapi_todo_app/domains/todos/db/: __init__.py  database.py
src/fastapi_todo_app/domains/todos/models/: __init__.py  todo.py
src/fastapi_todo_app/domains/todos/schemas/: __init__.py  todo.py
src/fastapi_todo_app/domains/todos/services/: __init__.py  todo_service.py
src/fastapi_todo_app/employees/api/: __init__.py  employees.py
src/fastapi_todo_app/employees/db/: __init__.py
src/fastapi_todo_app/employees/models/: employee.py
src/fastapi_todo_app/employees/schemas/: employee.py
src/fastapi_todo_app/employees/services/: employee_service.py
src/fastapi_todo_app/models/: todo.py
src/fastapi_todo_app/schemas/: todo.py
src/fastapi_todo_app/services/: todo_service.py
src/fastapi_todo_app/shared/: __init__.py
src/fastapi_todo_app/shared/core/: __init__.py  config.py
src/fastapi_todo_app/shared/database/: __init__.py  async_db.py
src/fastapi_todo_app/shared/exceptions/: __init__.py
src/fastapi_todo_app/shared/features/: __init__.py  advanced_api.py
src/fastapi_todo_app/shared/middleware/: __init__.py  performance.py
src/fastapi_todo_app/shared/monitoring/: __init__.py  observability.py
src/fastapi_todo_app/shared/security/: __init__.py  authentication.py
src/fastapi_todo_app/shared/utils/: __init__.py  background_tasks.py  caching.py  database_optimization.py  rate_limiting.py  response_optimization.py
tests/: conftest.py  test_enhanced_todos.py  test_framework.py  test_todos.py
